# firmware

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Dockerfile  cmake_and_build.sh  my_test_file.txt
Builds/DebugF3Disco/: CMakeLists.txt  cmake_install.cmake  compile_commands.json
Builds/SimCatalina/: CMakeLists.txt  CMakeLists2.txt  cmake_install.cmake  compile_commands.json  mmbtc_firmware  mmbtc_firmware_sim  sim_catalina.cmake
Builds/SimCatalina/tmp/lv_drivers/: cmake_install.cmake
Builds/SimCatalina/tmp/lvgl/: cmake_install.cmake
scripts/: build_debug_f3disco_with_docker.sh  build_sim_with_catalina.sh  build_with_docker.sh
scripts/flashing_and_debugging/: gdb_onto_device.sh
scripts/inside_docker/: cmake_and_build_f3disco.sh
src/PROJECT/: main.c  mbtc_connector.cpp  mbtc_connector.h  target_interface.h
src/PROJECT/views/: main_menu.c  main_menu.h
toolchains/: gcc-arm-none-eabi.cmake  sim_catalina.cmake
